# 148-spring-2025-final-project-team-8

./: ECE148.md  README.md  test_roboflow.py  test_servo.py
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: CameraData.msg  LabeledCentroid.msg
install/team8_pkg/lib/team8_pkg/: depth_node  target_node
install/team8_pkg/share/team8_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
team8_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
team8_pkg/config/: my_calibration.yaml  ros_racer_calibration.yaml
team8_pkg/launch/: camera_nav.launch.py  camera_nav_calibration.launch.py  target.launch.py  team8_pkg.launch.py
team8_pkg/msg/: CameraData.msg
team8_pkg/team8_pkg/: control_node.py  depth_node.py  lane_detection_node.py  lane_guidance_node.py  lidar_node.py  target_node.py
